@@ -9026,19 +9026,56 @@ block|{
 name|ShowTablesDesc
 name|showTblsDesc
 decl_stmt|;
+name|String
+name|dbName
+init|=
+name|db
+operator|.
+name|getCurrentDatabase
+argument_list|()
+decl_stmt|;
+name|String
+name|tableNames
+init|=
+literal|null
+decl_stmt|;
 if|if
 condition|(
 name|ast
 operator|.
 name|getChildCount
 argument_list|()
-operator|==
-literal|1
+operator|>
+literal|3
 condition|)
 block|{
-name|String
+throw|throw
+operator|new
+name|SemanticException
+argument_list|(
+name|ErrorMsg
+operator|.
+name|GENERIC_ERROR
+operator|.
+name|getMsg
+argument_list|()
+argument_list|)
+throw|;
+block|}
+switch|switch
+condition|(
+name|ast
+operator|.
+name|getChildCount
+argument_list|()
+condition|)
+block|{
+case|case
+literal|1
+case|:
+comment|// Uses a pattern
 name|tableNames
-init|=
+operator|=
 name|unescapeSQLString
 argument_list|(
 name|ast
@@ -9051,7 +9088,7 @@ operator|.
 name|getText
 argument_list|()
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 name|showTblsDesc
 operator|=
 operator|new
@@ -9062,12 +9099,48 @@ operator|.
 name|getResFile
 argument_list|()
 argument_list|,
+name|dbName
+argument_list|,
 name|tableNames
 argument_list|)
 expr_stmt|;
-block|}
-else|else
-block|{
+break|break;
+case|case
+literal|2
+case|:
+comment|// Specifies a DB
+assert|assert
+operator|(
+name|ast
+operator|.
+name|getChild
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getType
+argument_list|()
+operator|==
+name|HiveParser
+operator|.
+name|TOK_FROM
+operator|)
+assert|;
+name|dbName
+operator|=
+name|unescapeIdentifier
+argument_list|(
+name|ast
+operator|.
+name|getChild
+argument_list|(
+literal|1
+argument_list|)
+operator|.
+name|getText
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|showTblsDesc
 operator|=
 operator|new
@@ -9077,8 +9150,94 @@ name|ctx
 operator|.
 name|getResFile
 argument_list|()
+argument_list|,
+name|dbName
 argument_list|)
 expr_stmt|;
+break|break;
+case|case
+literal|3
+case|:
+comment|// Uses a pattern and specifies a DB
+assert|assert
+operator|(
+name|ast
+operator|.
+name|getChild
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getType
+argument_list|()
+operator|==
+name|HiveParser
+operator|.
+name|TOK_FROM
+operator|)
+assert|;
+name|dbName
+operator|=
+name|unescapeIdentifier
+argument_list|(
+name|ast
+operator|.
+name|getChild
+argument_list|(
+literal|1
+argument_list|)
+operator|.
+name|getText
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|tableNames
+operator|=
+name|unescapeSQLString
+argument_list|(
+name|ast
+operator|.
+name|getChild
+argument_list|(
+literal|2
+argument_list|)
+operator|.
+name|getText
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|showTblsDesc
+operator|=
+operator|new
+name|ShowTablesDesc
+argument_list|(
+name|ctx
+operator|.
+name|getResFile
+argument_list|()
+argument_list|,
+name|dbName
+argument_list|,
+name|tableNames
+argument_list|)
+expr_stmt|;
+break|break;
+default|default:
+comment|// No pattern or DB
+name|showTblsDesc
+operator|=
+operator|new
+name|ShowTablesDesc
+argument_list|(
+name|ctx
+operator|.
+name|getResFile
+argument_list|()
+argument_list|,
+name|dbName
+argument_list|)
+expr_stmt|;
+break|break;
 block|}
 name|rootTasks
 operator|.
