@@ -1,0 +1,4 @@
+PREHOOK: query: SHOW TABLES FROM nonexistent
+PREHOOK: type: SHOWTABLES
+FAILED: Error in metadata: ERROR: The database nonexistent does not exist.
+FAILED: Execution Error, return code 1 from org.apache.hadoop.hive.ql.exec.DDLTask
