@@ -123,6 +123,18 @@ PREHOOK: type: SHOWTABLES
 POSTHOOK: query: SHOW TABLES
 POSTHOOK: type: SHOWTABLES
 test_table
+PREHOOK: query: SHOW TABLES FROM default
+PREHOOK: type: SHOWTABLES
+POSTHOOK: query: SHOW TABLES FROM default
+POSTHOOK: type: SHOWTABLES
+src
+src1
+src_json
+src_sequencefile
+src_thrift
+srcbucket
+srcbucket2
+srcpart
 PREHOOK: query: -- DESCRIBE table in non-default DB
 DESCRIBE test_table
 PREHOOK: type: DESCTABLE
@@ -138,7 +150,7 @@ DESCRIBE EXTENDED test_table
 POSTHOOK: type: DESCTABLE
 col1	string	
 	 	 
-Detailed Table Information	Table(tableName:test_table, dbName:test_db, owner:thiruvel, createTime:1286799523, lastAccessTime:0, retention:0, sd:StorageDescriptor(cols:[FieldSchema(name:col1, type:string, comment:null)], location:pfile:/home/thiruvel/projects/hive/hive.unsecure/build/ql/test/data/warehouse/test_db.db/test_table, inputFormat:org.apache.hadoop.mapred.TextInputFormat, outputFormat:org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat, compressed:false, numBuckets:-1, serdeInfo:SerDeInfo(name:null, serializationLib:org.apache.hadoop.hive.serde2.lazy.LazySimpleSerDe, parameters:{serialization.format=1}), bucketCols:[], sortCols:[], parameters:{}), partitionKeys:[], parameters:{transient_lastDdlTime=1286799523}, viewOriginalText:null, viewExpandedText:null, tableType:MANAGED_TABLE)	
+Detailed Table Information	Table(tableName:test_table, dbName:test_db, owner:natty, createTime:1295497053, lastAccessTime:0, retention:0, sd:StorageDescriptor(cols:[FieldSchema(name:col1, type:string, comment:null)], location:pfile:/home/natty/apache/hive/build/ql/test/data/warehouse/test_db.db/test_table, inputFormat:org.apache.hadoop.mapred.TextInputFormat, outputFormat:org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat, compressed:false, numBuckets:-1, serdeInfo:SerDeInfo(name:null, serializationLib:org.apache.hadoop.hive.serde2.lazy.LazySimpleSerDe, parameters:{serialization.format=1}), bucketCols:[], sortCols:[], parameters:{}), partitionKeys:[], parameters:{transient_lastDdlTime=1295497053}, viewOriginalText:null, viewExpandedText:null, tableType:MANAGED_TABLE)
 PREHOOK: query: -- CREATE LIKE in non-default DB
 CREATE TABLE test_table_like LIKE test_table
 PREHOOK: type: CREATETABLE
@@ -158,7 +170,7 @@ POSTHOOK: query: DESCRIBE EXTENDED test_table_like
 POSTHOOK: type: DESCTABLE
 col1	string	
 	 	 
-Detailed Table Information	Table(tableName:test_table_like, dbName:test_db, owner:thiruvel, createTime:1286799523, lastAccessTime:0, retention:0, sd:StorageDescriptor(cols:[FieldSchema(name:col1, type:string, comment:null)], location:pfile:/home/thiruvel/projects/hive/hive.unsecure/build/ql/test/data/warehouse/test_db.db/test_table_like, inputFormat:org.apache.hadoop.mapred.TextInputFormat, outputFormat:org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat, compressed:false, numBuckets:-1, serdeInfo:SerDeInfo(name:null, serializationLib:org.apache.hadoop.hive.serde2.lazy.LazySimpleSerDe, parameters:{serialization.format=1}), bucketCols:[], sortCols:[], parameters:{}), partitionKeys:[], parameters:{EXTERNAL=FALSE, transient_lastDdlTime=1286799523}, viewOriginalText:null, viewExpandedText:null, tableType:MANAGED_TABLE)	
+Detailed Table Information	Table(tableName:test_table_like, dbName:test_db, owner:natty, createTime:1295497053, lastAccessTime:0, retention:0, sd:StorageDescriptor(cols:[FieldSchema(name:col1, type:string, comment:null)], location:pfile:/home/natty/apache/hive/build/ql/test/data/warehouse/test_db.db/test_table_like, inputFormat:org.apache.hadoop.mapred.TextInputFormat, outputFormat:org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat, compressed:false, numBuckets:-1, serdeInfo:SerDeInfo(name:null, serializationLib:org.apache.hadoop.hive.serde2.lazy.LazySimpleSerDe, parameters:{serialization.format=1}), bucketCols:[], sortCols:[], parameters:{}), partitionKeys:[], parameters:{transient_lastDdlTime=1295497053}, viewOriginalText:null, viewExpandedText:null, tableType:MANAGED_TABLE)
 PREHOOK: query: -- LOAD and SELECT
 LOAD DATA LOCAL INPATH '../data/files/test.dat' OVERWRITE INTO TABLE test_table
 PREHOOK: type: LOAD
@@ -169,11 +181,11 @@ POSTHOOK: Output: test_db@test_table
 PREHOOK: query: SELECT * FROM test_table
 PREHOOK: type: QUERY
 PREHOOK: Input: test_db@test_table
-PREHOOK: Output: file:/tmp/thiruvel/hive_2010-10-11_05-18-43_571_8452529108735420754/-mr-10000
+PREHOOK: Output: file:/tmp/natty/hive_2011-01-19_20-17-33_910_8849955411961165388/-mr-10000
 POSTHOOK: query: SELECT * FROM test_table
 POSTHOOK: type: QUERY
 POSTHOOK: Input: test_db@test_table
-POSTHOOK: Output: file:/tmp/thiruvel/hive_2010-10-11_05-18-43_571_8452529108735420754/-mr-10000
+POSTHOOK: Output: file:/tmp/natty/hive_2011-01-19_20-17-33_910_8849955411961165388/-mr-10000
 1
 2
 3
@@ -209,11 +221,11 @@ test_table_like
 PREHOOK: query: SELECT * FROM test_table
 PREHOOK: type: QUERY
 PREHOOK: Input: test_db@test_table
-PREHOOK: Output: file:/tmp/thiruvel/hive_2010-10-11_05-18-44_152_630231966460953295/-mr-10000
+PREHOOK: Output: file:/tmp/natty/hive_2011-01-19_20-17-38_129_5112535169216391173/-mr-10000
 POSTHOOK: query: SELECT * FROM test_table
 POSTHOOK: type: QUERY
 POSTHOOK: Input: test_db@test_table
-POSTHOOK: Output: file:/tmp/thiruvel/hive_2010-10-11_05-18-44_152_630231966460953295/-mr-10000
+POSTHOOK: Output: file:/tmp/natty/hive_2011-01-19_20-17-38_129_5112535169216391173/-mr-10000
 PREHOOK: query: -- CREATE table that already exists in DEFAULT
 USE test_db
 PREHOOK: type: SWITCHDATABASE
@@ -232,14 +244,21 @@ POSTHOOK: type: SHOWTABLES
 src
 test_table
 test_table_like
+PREHOOK: query: SHOW TABLES FROM test_db
+PREHOOK: type: SHOWTABLES
+POSTHOOK: query: SHOW TABLES FROM test_db
+POSTHOOK: type: SHOWTABLES
+src
+test_table
+test_table_like
 PREHOOK: query: SELECT * FROM src LIMIT 10
 PREHOOK: type: QUERY
 PREHOOK: Input: test_db@src
-PREHOOK: Output: file:/tmp/thiruvel/hive_2010-10-11_05-18-44_291_2571902017670449671/-mr-10000
+PREHOOK: Output: file:/tmp/natty/hive_2011-01-19_20-17-38_467_8075768514275581965/-mr-10000
 POSTHOOK: query: SELECT * FROM src LIMIT 10
 POSTHOOK: type: QUERY
 POSTHOOK: Input: test_db@src
-POSTHOOK: Output: file:/tmp/thiruvel/hive_2010-10-11_05-18-44_291_2571902017670449671/-mr-10000
+POSTHOOK: Output: file:/tmp/natty/hive_2011-01-19_20-17-38_467_8075768514275581965/-mr-10000
 PREHOOK: query: USE default
 PREHOOK: type: SWITCHDATABASE
 POSTHOOK: query: USE default
@@ -247,11 +266,11 @@ POSTHOOK: type: SWITCHDATABASE
 PREHOOK: query: SELECT * FROM src LIMIT 10
 PREHOOK: type: QUERY
 PREHOOK: Input: default@src
-PREHOOK: Output: file:/tmp/thiruvel/hive_2010-10-11_05-18-44_347_2889860459217553704/-mr-10000
+PREHOOK: Output: file:/tmp/natty/hive_2011-01-19_20-17-38_757_329306949772765592/-mr-10000
 POSTHOOK: query: SELECT * FROM src LIMIT 10
 POSTHOOK: type: QUERY
 POSTHOOK: Input: default@src
-POSTHOOK: Output: file:/tmp/thiruvel/hive_2010-10-11_05-18-44_347_2889860459217553704/-mr-10000
+POSTHOOK: Output: file:/tmp/natty/hive_2011-01-19_20-17-38_757_329306949772765592/-mr-10000
 238	val_238
 86	val_86
 311	val_311
